force-app/main/default/objects/Account/fields/Business_Use_Case_DLRS__c.field-meta.xml
<CustomField>
    <fullName>Business_Use_Case_DLRS__c</fullName>
    <description>Used in a roll up summary</description>
    <label>Business Use Case from Opp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>