force-app/main/default/objects/Account/fields/Calculated_Churn__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Churn__c</fullName>
    <formula>Date_churned__c  &gt;  Last_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Churn</label>
    <type>Checkbox</type>
</CustomField>