force-app/main/default/objects/Account/fields/Cancelled_Subs__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Subs__c</fullName>
    <label>Cancelled Subs</label>
    <summaryFilterItems>
        <field>chargebeeapps__CB_Subscription__c.chargebeeapps__Subscription_status__c</field>
        <operation>equals</operation>
        <value>CANCELLED, NON_RENEWING</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>chargebeeapps__CB_Subscription__c.Product_Line_Text__c</field>
        <operation>contains</operation>
        <value>Raydiant</value>
    </summaryFilterItems>
    <summaryForeignKey>chargebeeapps__CB_Subscription__c.chargebeeapps__Company__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>