force-app/main/default/objects/Account/fields/Case_in_Cancellation_Queue__c.field-meta.xml
<CustomField>
    <fullName>Case_in_Cancellation_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates a cancellation case is on the account (open or closed)</inlineHelpText>
    <label>Case in Cancellation Queue</label>
    <type>Checkbox</type>
</CustomField>