force-app/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Restaurant Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BUFFET</fullName>
            </value>
            <value>
                <fullName>CASUAL/FAMILY</fullName>
            </value>
            <value>
                <fullName>FAST CASUAL</fullName>
            </value>
            <value>
                <fullName>QUICK SERVE</fullName>
            </value>
            <value>
                <fullName>UPSCALE DINING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>