force-app/main/default/objects/Account/fields/CB_Subscription__c.field-meta.xml
<CustomField>
    <fullName>CB_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CB Subscription</label>
    <referenceTo>chargebeeapps__CB_Subscription__c</referenceTo>
    <relationshipLabel>Subscribed Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>