force-app/main/default/objects/Account/fields/Channel_Sales_Bob__c.field-meta.xml
<CustomField>
    <fullName>Channel_Sales_Bob__c</fullName>
    <label>Channel Sales BoB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Florian</fullName>
            </value>
            <value>
                <fullName>Regina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>