force-app/main/default/objects/Account/fields/Child_MRR_Opps_WON__c.field-meta.xml
<CustomField>
    <fullName>Child_MRR_Opps_WON__c</fullName>
    <label>Child MRR Opps WON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>