force-app/main/default/objects/Account/fields/Child_MSA_Opp_Count__c.field-meta.xml
<CustomField>
    <fullName>Child_MSA_Opp_Count__c</fullName>
    <description>Roll up of child msa opps</description>
    <label>Child MSA Opp Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>