force-app/main/default/objects/Account/fields/CHURN_COUNT_C__c.field-meta.xml
<CustomField>
    <fullName>CHURN_COUNT_C__c</fullName>
    <inlineHelpText>Recurly</inlineHelpText>
    <label>Recurly CHURN_COUNT__C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>