force-app/main/default/objects/Account/fields/Churn_Date__c.field-meta.xml
<CustomField>
    <fullName>Churn_Date__c</fullName>
    <label>First Churn Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Lost-Walk, Lost- Cancelled, Lost-Acquired</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Renewal, SS Renewal, Churn</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>