force-app/main/default/objects/Account/fields/Churn_DateRAY__c.field-meta.xml
<CustomField>
    <fullName>Churn_DateRAY__c</fullName>
    <inlineHelpText>This is the date the cancellation goes into effect</inlineHelpText>
    <label>Churn Date</label>
    <type>Date</type>
</CustomField>