force-app/main/default/objects/Account/fields/Churn_Details__c.field-meta.xml
<CustomField>
    <fullName>Churn_Details__c</fullName>
    <inlineHelpText>This is any explanation on Churn or overall satisfaction.</inlineHelpText>
    <label>Additional Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>