force-app/main/default/objects/Account/fields/Churn_Month__c.field-meta.xml
<CustomField>
    <fullName>Churn_Month__c</fullName>
    <description>Month of recent churn</description>
    <label>Churn Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>