force-app/main/default/objects/Account/fields/Churn_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason__c</fullName>
    <label>Churn Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>