force-app/main/default/objects/Account/fields/Churn_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason_Details__c</fullName>
    <label>Churn Reason Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>