force-app/main/default/objects/Account/fields/Churn_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Churn_Request_Date__c</fullName>
    <inlineHelpText>This is the date the customer makes their request to cancel</inlineHelpText>
    <label>Cancellation Request Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>