force-app/main/default/objects/Account/fields/Churn_Risk_Detail__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Detail__c</fullName>
    <label>Churn Risk Detail</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>