force-app/main/default/objects/Account/fields/Churn_Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Reason__c</fullName>
    <label>Churn Risk Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquired/Merged</fullName>
            </value>
            <value>
                <fullName>Admin Maintenance</fullName>
                <label>Admin Maintenance- UX</label>
            </value>
            <value>
                <fullName>Champion Left</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t see Value</fullName>
                <label>Low Value/ Adoption</label>
            </value>
            <value>
                <fullName>Missing Feature</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Not a good fit for Hoopla</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Reduce Headcount</fullName>
            </value>
            <value>
                <fullName>Remote Employees</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Support Issue</fullName>
            </value>
            <value>
                <fullName>Went Dark - No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>