force-app/main/default/objects/Account/fields/Churn_Status2__c.field-meta.xml
<CustomField>
    <fullName>Churn_Status2__c</fullName>
    <inlineHelpText>This field is updated when any related subscription changes status (or is created)</inlineHelpText>
    <label>Ray Churn Status (Historic)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Partially Churned</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>