force-app/main/default/objects/Account/fields/Churn_status__c.field-meta.xml
<CustomField>
    <fullName>Churn_status__c</fullName>
    <inlineHelpText>Churned-All subscription have been cancelled
Part Churn sub-1 or more Raydiant monthly/annual services subscription have been cancelled
Part Churn Other- 1 or more other than Raydiant monthly/annual services subscription have been cancelled.</inlineHelpText>
    <label>Ray Churn status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Partially Churned Subscription</fullName>
            </value>
            <value>
                <fullName>Partially Churned Other</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>