force-app/main/default/objects/Account/fields/Churn_Year__c.field-meta.xml
<CustomField>
    <fullName>Churn_Year__c</fullName>
    <description>Recent Churn Year</description>
    <label>Churn Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>