force-app/main/default/objects/Account/fields/Closed_Won_Opps__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Opps__c</fullName>
    <label>Closed Won Opps</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>