force-app/main/default/objects/Account/fields/Collections__c.field-meta.xml
<CustomField>
    <fullName>Collections__c</fullName>
    <label>Collections</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Day Reminder Email</fullName>
            </value>
            <value>
                <fullName>3 Day Reminder Email</fullName>
            </value>
            <value>
                <fullName>5 Day Text &amp; Email with Balance</fullName>
            </value>
            <value>
                <fullName>7 Day Call</fullName>
            </value>
            <value>
                <fullName>9 Day Disruption In Service Email &amp; Text</fullName>
            </value>
            <value>
                <fullName>11 Day Service Is Being Shut Off</fullName>
            </value>
            <value>
                <fullName>13 Day Service is Shut Off &amp; Text</fullName>
            </value>
            <value>
                <fullName>15 Day Balance Due Email</fullName>
            </value>
            <value>
                <fullName>20 Day To Avoid Collections</fullName>
            </value>
            <value>
                <fullName>25 Day Your Account is Being Sent To Collections</fullName>
            </value>
            <value>
                <fullName>30 Day Collections</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>