force-app/main/default/objects/Account/fields/Communication_Platforms__c.field-meta.xml
<CustomField>
    <fullName>Communication_Platforms__c</fullName>
    <label>Communication Platforms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Communications_Platforms</valueSetName>
    </valueSet>
</CustomField>