force-app/main/default/objects/Account/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>11-30</fullName>
            </value>
            <value>
                <fullName>31-100</fullName>
            </value>
            <value>
                <fullName>101-500</fullName>
            </value>
            <value>
                <fullName>501-2000</fullName>
            </value>
            <value>
                <fullName>2001+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>