force-app/main/default/objects/Account/fields/Competitive_Installed__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Installed__c</fullName>
    <label>Competitive (Installed)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitors</valueSetName>
    </valueSet>
</CustomField>