force-app/main/default/objects/Account/fields/Contracts_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Cancelled__c</fullName>
    <inlineHelpText>Declarative Rollup of Contracts in &quot;Cancelled&quot;</inlineHelpText>
    <label>Contracts Cancelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>