force-app/main/default/objects/Account/fields/Contracts_Paused__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Paused__c</fullName>
    <inlineHelpText>Declarative Rollup of Contracts in PAUSE</inlineHelpText>
    <label>Contracts Paused</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>