force-app/main/default/objects/Account/fields/Contracts_Total__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Total__c</fullName>
    <inlineHelpText>Declarative Rollup of all Contracts on file for this Account</inlineHelpText>
    <label>Contracts Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>