force-app/main/default/objects/Account/fields/Create_Month_Yr__c.field-meta.xml
<CustomField>
    <fullName>Create_Month_Yr__c</fullName>
    <inlineHelpText>Imported Data</inlineHelpText>
    <label>Create Month/Yr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>