force-app/main/default/objects/Account/fields/Created_by_Stripe__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Stripe__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies accounts created by Stripe rather than Salesforce input</description>
    <label>Created by Stripe</label>
    <type>Checkbox</type>
</CustomField>