force-app/main/default/objects/Account/fields/CRM_Platform__c.field-meta.xml
<CustomField>
    <fullName>CRM_Platform__c</fullName>
    <label>CRM Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRM</valueSetName>
    </valueSet>
</CustomField>