force-app/main/default/objects/Account/fields/CSF_Factor__c.field-meta.xml
<CustomField>
    <fullName>CSF_Factor__c</fullName>
    <label>CSF Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>