force-app/main/default/objects/Account/fields/CSM_C__c.field-meta.xml
<CustomField>
    <fullName>CSM_C__c</fullName>
    <inlineHelpText>Recurly</inlineHelpText>
    <label>CSM_C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>