force-app/main/default/objects/Account/fields/CSM_Lead__c.field-meta.xml
<CustomField>
    <fullName>CSM_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Customer Success Manager who is primarily responsible for this account.</description>
    <label>CSM Lead</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Rentention</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>