force-app/main/default/objects/Account/fields/CSM_Name2__c.field-meta.xml
<CustomField>
    <fullName>CSM_Name2__c</fullName>
    <label>CSM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>