force-app/main/default/objects/Account/fields/CSM_Name__c.field-meta.xml
<CustomField>
    <fullName>CSM_Name__c</fullName>
    <formula>if(CSM_Lead__c  &lt;&gt; &quot;&quot;, CSM_Lead__r.FirstName &amp; &quot; &quot; &amp; CSM_Lead__r.LastName, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM Name</label>
    <type>Text</type>
</CustomField>