force-app/main/default/objects/Account/fields/CSM_Team_Member_Added__c.field-meta.xml
<CustomField>
    <fullName>CSM_Team_Member_Added__c</fullName>
    <label>CSM Team Member Added</label>
    <type>DateTime</type>
</CustomField>