force-app/main/default/objects/Account/fields/Customer_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Customer_Campaign__c</fullName>
    <label>Customer Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>