force-app/main/default/objects/Account/fields/Customer_Chargebee_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Chargebee_ID__c</fullName>
    <label>Customer Chargebee ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>