force-app/main/default/objects/Account/fields/Customer_Index__c.field-meta.xml
<CustomField>
    <fullName>Customer_Index__c</fullName>
    <label>Customer Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>