force-app/main/default/objects/Account/fields/Customer_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Customer_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts (Customer Opportunity)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>