force-app/main/default/objects/Account/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <label>Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Churning</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Unprocessed</fullName>
            </value>
            <value>
                <fullName>Pending Delivery</fullName>
            </value>
            <value>
                <fullName>First 2 Weeks</fullName>
            </value>
            <value>
                <fullName>First Month</fullName>
            </value>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>Up for Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>