force-app/main/default/objects/Account/fields/Customer_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Customer_Vertical__c</fullName>
    <description>Product counts from subs are used in a product formula, then the formulas are used here</description>
    <formula>CX_Product_Formula__c&amp;&quot; &quot;&amp;EX_Product_Formula__c&amp;&quot; &quot;&amp;RX_Product_Formula__c&amp;&quot; &quot;&amp;AI_Product_Formula__c&amp;&quot; &quot;&amp;DX_Product_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rolled up from business use case found on ACTIVE subscriptions</inlineHelpText>
    <label>Customer Vertical</label>
    <type>Text</type>
</CustomField>