force-app/main/default/objects/Account/fields/CX_Product_Formula__c.field-meta.xml
<CustomField>
    <fullName>CX_Product_Formula__c</fullName>
    <formula>IF(CX_Product_Sum_from_Opps__c &gt; 0,&quot;CX&quot;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CX Product Formula</label>
    <type>Text</type>
</CustomField>