force-app/main/default/objects/Account/fields/CX_Product_Sum_from_Opps__c.field-meta.xml
<CustomField>
    <fullName>CX_Product_Sum_from_Opps__c</fullName>
    <description>Sum of CX product count from subscriptions</description>
    <inlineHelpText>F52_Active__c = TRUE AND Business_Use_Case__c = &apos;Customer Experience&apos; (refreshed Nightly)</inlineHelpText>
    <label>Active CX Subscript Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>