force-app/main/default/objects/Account/fields/cybsbilling__VAT_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>cybsbilling__VAT_Registration_Number__c</fullName>
    <description>Enter the Buyer Information Vat Registration Number</description>
    <label>VAT Registration Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>