force-app/main/default/objects/Account/fields/Dashboard_Email__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Email__c</fullName>
    <label>Dashboard Email</label>
    <type>Email</type>
</CustomField>