force-app/main/default/objects/Account/fields/Data_Processing_Agreement_Permission__c.field-meta.xml
<CustomField>
    <fullName>Data_Processing_Agreement_Permission__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>From Sightcorp Trial Form</inlineHelpText>
    <label>Data Processing Agreement Permission</label>
    <type>Checkbox</type>
</CustomField>