force-app/main/default/objects/Account/fields/Dataloader_Update_Flag__c.field-meta.xml
<CustomField>
    <fullName>Dataloader_Update_Flag__c</fullName>
    <label>Dataloader Update Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>