force-app/main/default/objects/Account/fields/Date_churned__c.field-meta.xml
<CustomField>
    <fullName>Date_churned__c</fullName>
    <label>Last Date churned</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Lost- Cancelled, Lost-Walk, Lost-Acquired</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Churn, Renewal</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>