force-app/main/default/objects/Account/fields/Date_first_opp_created__c.field-meta.xml
<CustomField>
    <fullName>Date_first_opp_created__c</fullName>
    <label>Date first opp created</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>