force-app/main/default/objects/Account/fields/Date_of_First_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Closed_Won__c</fullName>
    <label>Date of First Closed Won</label>
    <type>Date</type>
</CustomField>