force-app/main/default/objects/Account/fields/Date_of_First_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Expansion__c</fullName>
    <label>Date of First Expansion</label>
    <type>Date</type>
</CustomField>