force-app/main/default/objects/Account/fields/Date_of_Most_Recent_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Most_Recent_Expansion__c</fullName>
    <label>Date of Most Recent Expansion</label>
    <type>Date</type>
</CustomField>