force-app/main/default/objects/Account/fields/Days_in_Dunning__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Dunning__c</fullName>
    <formula>IF( TEXT(AR_Status__c) = &quot;Dunning Activated&quot;,        TODAY() -  Dunning_Requested__c ,
IF( TEXT(AR_Status__c) = &quot;Considering Collections&quot;,  TODAY() -  Dunning_Requested__c,
IF( TEXT(AR_Status__c) = &quot;In Collections&quot;,           TODAY() -  Dunning_Requested__c, 


 Dunning_Removed_Reversed__c - Dunning_Requested__c)))</formula>
    <label>Days in Dunning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>