force-app/main/default/objects/Account/fields/Days_Since_Most_Recent_Heartbeat__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Most_Recent_Heartbeat__c</fullName>
    <description>Used in DLRS</description>
    <formula>(TODAY()- DATEVALUE(Most_Recent_Heartbeat__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Most Recent Heartbeat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>