force-app/main/default/objects/Account/fields/Days_Since_WooHoo_Email__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_WooHoo_Email__c</fullName>
    <formula>TODAY() - DATEVALUE(WooHoo_Date_Sent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(First Asset Registered Date)</inlineHelpText>
    <label>Days Since WooHoo Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>