force-app/main/default/objects/Account/fields/Deactivate_all_Cards__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_all_Cards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate all Cards</label>
    <type>Checkbox</type>
</CustomField>