force-app/main/default/objects/Account/fields/Dealer_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Contract_Start_Date__c</fullName>
    <label>Dealer Contract Start Date</label>
    <type>Date</type>
</CustomField>