force-app/main/default/objects/Account/fields/Dealer_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Dealer__c</referenceTo>
    <relationshipLabel>Replaced by Account</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>