force-app/main/default/objects/Account/fields/Dealer_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Number__c</fullName>
    <label>Dealer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>