force-app/main/default/objects/Account/fields/Dealer_of_Record__c.field-meta.xml
<CustomField>
    <fullName>Dealer_of_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer of Record</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Dealer of Record)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>