force-app/main/default/objects/Account/fields/Dealer_Status__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Status__c</fullName>
    <label>Raydiant Dealer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Non Active</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Transferred to DSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>