force-app/main/default/objects/Account/fields/Default_PM_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_PM_ID__c</fullName>
    <formula>F52_Payment_Method_Auto_Pay__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default PM ID</label>
    <type>Text</type>
</CustomField>