force-app/main/default/objects/Account/fields/Device_Count__c.field-meta.xml
<CustomField>
    <fullName>Device_Count__c</fullName>
    <inlineHelpText>Rollup of all related PO records - Device Count. (sum)</inlineHelpText>
    <label>Device Count (not in use)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>