force-app/main/default/objects/Account/fields/Device_Count_on_Won__c.field-meta.xml
<CustomField>
    <fullName>Device_Count_on_Won__c</fullName>
    <inlineHelpText>NEW!!  Rollup us &quot;Device Count II&quot; on Closed Won opps</inlineHelpText>
    <label>Device Count on Won</label>
    <summarizedField>Opportunity.Device_Count_II__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>