force-app/main/default/objects/Account/fields/Device_Status__c.field-meta.xml
<CustomField>
    <fullName>Device_Status__c</fullName>
    <label>Device Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Churning</fullName>
            </value>
            <value>
                <fullName>Device received</fullName>
            </value>
            <value>
                <fullName>Charged back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>