force-app/main/default/objects/Account/fields/DIstributor__c.field-meta.xml
<CustomField>
    <fullName>DIstributor__c</fullName>
    <label>Distributor Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Independant</fullName>
            </value>
            <value>
                <fullName>P10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>